Add new author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,5 +7,6 @@ Fridrich Štrba <fridrich.strba@bluewin.ch>
 Petr Mladek <pmladek@suse.cz>
 Philipp Thomas <pth@suse.de>
 Stephan Bergmann <sbergman@redhat.com>
+Takeshi Abe <tabe@fixedpoint.jp>
 Heiko Becker <heirecka@exherbo.org>
 Tomáš Chvátal <scarabeus@gentoo.org>
