--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,9 @@
+mdds 1.3.0
+
 * multi_type_vector
 
   * changed the primary block array storage to remove additional
-    indirection.
+    indirection, for improved memory locality.
 
 mdds 1.2.3
 
