Add Dennis to the AUTHORS list.

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Kohei Yoshida  <kohei.yoshida@gmail.com> (Maintainer)
 David Tardon  <dtardon@redhat.com>
 Markus Mohrhard <markus.mohrhard@googlemail.com>
 Caolán McNamara <caolanm@redhat.com>
+Dennis Francis <dennis.francis@collabora.co.uk>
 William BONNET <william@wbonnet.net>
 Fridrich Štrba <fridrich.strba@bluewin.ch>
 Petr Mladek <pmladek@suse.cz>
