--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+mdds 1.3.1
+
+* flat_segment_tree
+
+  * fixed a bug that caused an assertion error when inserting a
+    out-of-bound segment whose start value equals the max key value.
+
 mdds 1.3.0
 
 * multi_type_vector
