--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+* multi_type_matrix
+
+  * all of its walk() methods now allow in-line lambdas to be used, by
+    not taking a reference of the function object parameters.
+
 mdds 1.3.1
 
 * flat_segment_tree
