Oops. This is incorrect. Caolan's change hasn't been in a release yet.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,12 @@
+* all
+
+  * fixed CXXFLAGS incorrectly bein overwritten.
+
 mdds 1.4.1
 
 * all
 
   * fixed all warnings on shadowed variables.
-
-  * fixed CXXFLAGS incorrectly bein overwritten.
 
 * multi_type_vector
 
