--- a/AUTHORS
+++ b/AUTHORS
@@ -1,13 +1,15 @@
-Kohei Yoshida  <kohei.yoshida@gmail.com> (Maintainer)
-David Tardon  <dtardon@redhat.com>
+Kohei Yoshida <kohei.yoshida@gmail.com>
+David Tardon <dtardon@redhat.com>
 Markus Mohrhard <markus.mohrhard@googlemail.com>
 Caolán McNamara <caolanm@redhat.com>
-Dennis Francis <dennis.francis@collabora.co.uk>
+Takeshi Abe <tabe@fixedpoint.jp>
+Stephan Bergmann <sbergman@redhat.com>
 William BONNET <william@wbonnet.net>
 Fridrich Štrba <fridrich.strba@bluewin.ch>
 Petr Mladek <pmladek@suse.cz>
 Philipp Thomas <pth@suse.de>
-Stephan Bergmann <sbergman@redhat.com>
-Takeshi Abe <tabe@fixedpoint.jp>
+Chris Mayo <aklhfex@gmail.com>
+Dennis Francis <dennis.francis@collabora.co.uk>
 Heiko Becker <heirecka@exherbo.org>
+Luboš Luňák <l.lunak@centrum.cz>
 Tomáš Chvátal <scarabeus@gentoo.org>
