I'm still the maintainer.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Kohei Yoshida <kohei.yoshida@gmail.com>
+Kohei Yoshida <kohei.yoshida@gmail.com> (Maintainer)
 David Tardon <dtardon@redhat.com>
 Markus Mohrhard <markus.mohrhard@googlemail.com>
 Caolán McNamara <caolanm@redhat.com>
