--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,14 @@
 mdds 1.5.0
 
+* documentation
+
+  * moved the documentation hosting to readthedocs.io, and adjusted the build
+    steps.
+
+  * moved the API incompatibility notes from README to the rst doc.
+
+  * added the overview section for flat_segment_tree.
+
 * multi_type_vector
 
   * fixed the static get(const const_position_type& pos) method for the
