Add changes for 2.1.1
Also fix the extra level of indentation for the past few release
items.  I'm not sure why I did that...

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,43 +1,60 @@
+mdds 2.1.1
+
+* flat_segment_tree
+
+  * added a method that returns a segment range object compatible with ranged
+    for loop.
+
+  * added a move constructor and a move assignment operator.
+
+  * added variants of search() and search_tree() that return a result data
+    structure that contains the value, the start and end keys of the range.
+
+* multi_type_vector
+
+  * added a range adaptor for mdds::mtv::element_block compatible with ranged
+    for loop.
+
 mdds 2.1.0
 
-  * general
+* general
 
-    * switched to using ax_valgrind_check for running memory tests.  This
-      introduces additional build targets, such as check-valgrind to run the
-      tests under valgrind.
+  * switched to using ax_valgrind_check for running memory tests.  This
+    introduces additional build targets, such as check-valgrind to run the
+    tests under valgrind.
 
-  * multi_type_vector
+* multi_type_vector
 
-    * delayed_delete_vector has been introduced as the new default storage
-      type for the element blocks.  This storage type is optimized for use
-      cases where elements get repeatedly erased from the front of the array,
-      by delaying the actual deletion of the elements until much later.  This
-      reduces the amount of element shifting associated with the element
-      deletions, which can be costly.
+  * delayed_delete_vector has been introduced as the new default storage type
+    for the element blocks.  This storage type is optimized for use cases
+    where elements get repeatedly erased from the front of the array, by
+    delaying the actual deletion of the elements until much later.  This
+    reduces the amount of element shifting associated with the element
+    deletions, which can be costly.
 
-    * added an additional template parameter to the element block types in
-      order to allow the underlying storage type to be specified per element
-      type.  This can be used to switch between std::vector, std::deque,
-      delayed_delete_vector, or any other compatible custom container types.
+  * added an additional template parameter to the element block types in order
+    to allow the underlying storage type to be specified per element type.
+    This can be used to switch between std::vector, std::deque,
+    delayed_delete_vector, or any other compatible custom container types.
 
-  * sorted_string_map
+* sorted_string_map
 
-    * made the entry type a template parameter to allow optionally defining
-      the keys in the entry values as std::string_view.
+  * made the entry type a template parameter to allow optionally defining the
+    keys in the entry values as std::string_view.
 
 mdds 2.0.3
 
-  * general
+* general
 
-    * defined clang-format rules, and globally applied them to all active
-      source files.
+  * defined clang-format rules, and globally applied them to all active source
+    files.
 
-  * multi_type_vector
+* multi_type_vector
 
-    * revised the block position lookup implementation to avoid using the
-      internal STL iterators.  The new implementation should be able to handle
-      invalid position hints more gracefully without potential process
-      termination.
+  * revised the block position lookup implementation to avoid using the
+    internal STL iterators.  The new implementation should be able to handle
+    invalid position hints more gracefully without potential process
+    termination.
 
 mdds 2.0.2
 
