--- a/CHANGELOG
+++ b/CHANGELOG
@@ -11,8 +11,8 @@ mdds 3.2.0
     mdds::mtv::clone_block to be provided for the value types of
     affected element blocks.
 
-  * introduced new macro called MDDS_MULTI_TYPE_VECTOR_DEBUG_TRACE to
-    enable call tracing instead of reusing MDDS_MULTI_TYPE_VECTOR_DEBUG,
+  * introduced new macro called MDDS_MULTI_TYPE_VECTOR_TRACE to enable
+    call tracing instead of reusing MDDS_MULTI_TYPE_VECTOR_DEBUG,
     because the latter macro also enables expensive debug block
     integrity checks throughout the code.
 
